samples/_failures_safe/1761411557_248f75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8600fb9a.c: In function ‘main’:
./samples/SAFE/__tmp_8600fb9a.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
